fix: spacings variables

--- a/packages/scss/src/components/comment/component.scss
+++ b/packages/scss/src/components/comment/component.scss
@@ -2,7 +2,7 @@
 	container: comment / inline-size;
 	display: flex;
 	flex-direction: column;
-	gap: var(--spacings-XS);
+	gap: var(--pr-t-spacings-100);
 	max-width: 40rem;
 
 	@at-root ($atRoot) {
@@ -10,7 +10,7 @@
 			align-items: first baseline;
 			display: flex;
 			font-style: normal;
-			gap: var(--spacings-XS);
+			gap: var(--pr-t-spacings-100);
 			justify-content: flex-start;
 
 			@container comment (min-width: 25em) {
@@ -28,14 +28,14 @@
 			@container comment (min-width: 25em) {
 				align-items: center;
 				flex-direction: row;
-				gap: var(--spacings-XS);
+				gap: var(--pr-t-spacings-100);
 			}
 		}
 
 		.comment-infos-name + .comment-infos-date {
 			align-items: center;
 			display: flex;
-			gap: var(--spacings-XS);
+			gap: var(--pr-t-spacings-100);
 
 			&::before {
 				background-color: var(--palettes-grey-400);
@@ -57,9 +57,9 @@
 			display: flex;
 			flex-direction: column;
 			gap: 0.75rem;
-			margin: var(--components-comment-content-margin);
+			margin: 0 0 0 var(--components-comment-content-margin);
 			max-width: fit-content;
-			padding: var(--spacings-XS) 0.625rem;
+			padding: var(--pr-t-spacings-100) 0.625rem;
 		}
 
 		.comment-content-text {
@@ -69,7 +69,7 @@
 		.comment-content-textContainer {
 			display: flex;
 			flex-direction: column;
-			gap: var(--spacings-XS);
+			gap: var(--pr-t-spacings-100);
 
 			* {
 				margin: 0;
@@ -89,7 +89,7 @@
 		.commentWrapper {
 			display: flex;
 			flex-direction: column;
-			gap: var(--spacings-XS);
+			gap: var(--pr-t-spacings-100);
 			margin: 0;
 			padding: 0;
 		}
@@ -99,7 +99,7 @@
 			max-width: 40rem;
 
 			&.mod-WrapperAvatar ~ &:not(.mod-WrapperAvatar) {
-				padding-left: var(--spacings-L);
+				padding-left: var(--components-comment-content-margin);
 			}
 		}
 	}
