--- a/packages/scss/src/components/comment/vars.scss
+++ b/packages/scss/src/components/comment/vars.scss
@@ -3,5 +3,5 @@
 	--components-comment-text-lineHeight: var(--sizes-M-lineHeight);
 	--components-comment-info-fontSize: var(--sizes-S-fontSize);
 	--components-comment-info-lineHeight: var(--sizes-S-lineHeight);
-	--components-comment-content-margin: 0 0 0 2rem; // 1.5rem for the width of the avatar and 0.5rem for the gap
+	--components-comment-content-margin: calc(1.5rem + var(--pr-t-spacings-100)); // 1.5rem for the width of the avatar and 0.5rem for the gap
 }
